--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/ichmen/JSLessons#readme",
   "devDependencies": {
     "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6"
+    "@babel/preset-env": "^7.18.6",
+    "eslint": "^8.20.0"
   },
   "dependencies": {
     "ansi-styles": "^3.2.1",
@@ -30,8 +31,8 @@
     "call-bind": "^1.0.2",
     "caniuse-lite": "^1.0.30001359",
     "chalk": "^2.4.2",
-    "color-name": "^1.1.3",
     "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
     "convert-source-map": "^1.8.0",
     "core-js-compat": "^3.23.3",
     "debug": "^4.3.4",
@@ -50,8 +51,8 @@
     "has-symbols": "^1.0.3",
     "is-core-module": "^2.9.0",
     "js-tokens": "^4.0.0",
-    "json5": "^2.2.1",
     "jsesc": "^2.5.2",
+    "json5": "^2.2.1",
     "lodash.debounce": "^4.0.8",
     "ms": "^2.1.2",
     "node-releases": "^2.0.5",
